--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -9,3 +9,6 @@ $white: #f4eee0;
 $card: #fffbea;
 $red: #e94560;
 $box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+$imageLarge: url(../public/imagesoptimzer/hero-image_2-large.jpg);
+$imageMedium: url(../public/imagesoptimzer/hero-image_2-meduim.jpg);
+$imageSmall: url(../public/imagesoptimzer/hero-image_2-small.jpg);
